tools/hrw4u/tests/data/ops/skip_remap_quoted_bool.fail.error.txt
tests/data/ops/skip_remap_quoted_bool.fail.input.txt:2:4: error: Invalid boolean value '"true"'. Must be one of: 0, 1, FALSE, NO, OFF, ON, TRUE, YES and must not be quoted
   2 |     skip-remap("true");
     |     ^
